Use Montserrat font for main navigation. Increases readability. Fixes #15

--- a/style.css
+++ b/style.css
@@ -1349,6 +1349,7 @@ a:active {
 	display: block;
 	padding: 10px 0;
 	text-decoration: none;
+	font-family: 'Montserrat', Arial, sans-serif;
 }
 
 .main-navigation .menu > li > a {
